<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="back_button">Кнопка назад</string>
    <string name="engine_power">Мощность двигателя</string>
    <string name="specifications">Характеристики</string>
    <string name="engine_capacity">Объём двигателя</string>
    <string name="fuel_type">Тип топлива</string>
    <string name="mileage">Пробег</string>
    <string name="body_type">Тип кузова</string>
    <string name="color">Цвет</string>
    <string name="transmission">Коробка передач</string>
    <string name="drivetrain">Привод</string>
    <string name="wheel_position">Расположение руля</string>
    <string name="condition">Состояние</string>
    <string name="owners">Владельцы</string>
    <string name="car_price">%1$,d ₽</string>
    <string name="car_brand_model_year">%1$s %2$s, %3$d</string>
    <string name="comparisons">Сравнения</string>
    <string name="you_haven_t_added_any_ads_to_comparisons">Вы еще ничего не добавили в список сравнения</string>
</resources>
