<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_specs_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/specifications"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_power_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/engine_power"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_specs_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_power_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_power_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_capacity_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/engine_capacity"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_power_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_capacity_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_capacity_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_fuel_type_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fuel_type"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_capacity_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_fuel_type_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_fuel_type_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_mileage_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/mileage"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_fuel_type_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_mileage_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_mileage_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_body_type_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/body_type"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_mileage_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_body_type_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_body_type_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_color_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_body_type_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_color_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_color_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_transmission_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/transmission"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_color_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_transmission_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_transmission_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_drivetrain_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/drivetrain"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_transmission_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_drivetrain_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_drivetrain_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_wheel_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/wheel_position"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_drivetrain_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_wheel_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_wheel_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_condition_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/condition"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_wheel_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_condition_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_condition_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_owners_shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/owners"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_condition_value_shimmer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_owners_value_shimmer"
        android:layout_width="100dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_owners_shimmer" />

</androidx.constraintlayout.widget.ConstraintLayout>
