<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_specs_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/specifications"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_power_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/engine_power"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_specs_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_power_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_power_tv"
        tools:text="10000 HP" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_capacity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/engine_capacity"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_power_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_engine_capacity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_capacity_tv"
        tools:text="100.0 L" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_fuel_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fuel_type"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_engine_capacity_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_fuel_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_fuel_type_tv"
        tools:text="Diesel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_mileage_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/mileage"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_fuel_type_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_mileage_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_mileage_tv"
        tools:text="51 400 km" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_body_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/body_type"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_mileage_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_body_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_body_type_tv"
        tools:text="Station wagon (Estate)" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_color_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_body_type_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_color_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_color_tv"
        tools:text="Green" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_transmission_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/transmission"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_color_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_transmission_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_transmission_tv"
        tools:text="Automatic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_drivetrain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/drivetrain"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_transmission_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_drivetrain_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_drivetrain_tv"
        tools:text="AWD" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_wheel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/wheel_position"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_drivetrain_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_wheel_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_wheel_tv"
        tools:text="Left" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_condition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/condition"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_wheel_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_condition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_condition_tv"
        tools:text="Requires repair" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_owners_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/owners"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_condition_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compared_car_owners_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compared_car_owners_tv"
        tools:text="2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/title_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="compared_car_specs_tv, compared_car_engine_power_tv, compared_car_engine_capacity_tv, compared_car_fuel_type_tv, compared_car_mileage_tv, compared_car_body_type_tv, compared_car_color_tv, compared_car_transmission_tv, compared_car_drivetrain_tv, compared_car_wheel_tv, compared_car_condition_tv, compared_car_owners_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
